Fix getting started page alignment

--- a/src/_sass/pages/_shared.scss
+++ b/src/_sass/pages/_shared.scss
@@ -66,7 +66,9 @@
   height: 400px;
 }
 
-.width-80 {
-  width: 80%;
-  margin: auto;
+@media (min-width: 992px) {
+  .width-980 {
+    max-width: 980px;
+    margin: auto;
+  }
 }
